# FractalFinder

./: .gitmodules  CMakeLists.txt  README.md
include/: Game.hpp
res/: burning.glsl  fragment.glsl  julia0.glsl  julia1.glsl  julia2.glsl  mandelbrot.glsl  tricorn.glsl  vertex.glsl
src/: Game.cpp  main.cpp
